--- a/src/components/BackBt.astro
+++ b/src/components/BackBt.astro
@@ -13,6 +13,7 @@ const { url, label } = Astro.props;
 <style>
 
     .back {
+        position: absolute;
         display: flex;
         justify-content: center;
         align-items: center;
