--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -13,50 +13,6 @@ ul, li {
     margin-inline: auto;
 }
 
-.back {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.8rem;
-    width: fit-content;
-    z-index: 2;
-    background-color: var(--light-d);
-    padding: clamp(1rem, 3vw, 1.3rem) 2rem clamp(1rem, 3vw, 1.3rem) var(--base-width-overflow);
-    font-size: clamp(1.3rem, 4vw, 1.6rem);
-    font-weight: 500;
-    color: var(--primary-d);
-    border-radius: 0 0 0.4rem 0;
-    transition: background-color 0.3s ease;
-    -webkit-transition: background-color 0.3s ease;
-    -moz-transition: background-color 0.3s ease;
-    -ms-transition: background-color 0.3s ease;
-    -o-transition: background-color 0.3s ease;
-    border-right: 0.2rem solid var(--light-a);
-    border-bottom: 0.2rem solid var(--light-a);
-}
-
-.back:hover {
-    background-color: var(--light);
-    transition: background-color 0s ease;
-    -webkit-transition: background-color 0s ease;
-    -moz-transition: background-color 0s ease;
-    -ms-transition: background-color 0s ease;
-    -o-transition: background-color 0s ease;
-}
-
-.back span {
-
-}
-
-.back .icon {
-    width: 0.4rem;
-    height: 0.4rem;
-    transform: rotate(45deg);
-    border-left: 0.3rem solid;
-    border-bottom: 0.3rem solid;
-    border-color: var(--light-b);
-}
-
 time {
     font-size: clamp(1.2rem, 3vw, 1.3rem);
     color: var(--primary-d);
@@ -97,7 +53,7 @@ a.category_indicator:hover {
     background-color: var(--light);
     padding: 0.3rem 0.9rem;
     border-radius: 0.3rem;
-    border: 0.2rem solid var(--light-a);
+    border: 0.2rem solid var(--light-d);
     transition: background-color 0.3s ease;
     -webkit-transition: background-color 0.3s ease;
     -moz-transition: background-color 0.3s ease;
@@ -106,7 +62,7 @@ a.category_indicator:hover {
 }
 
 .read_more:hover {
-    background-color: var(--light-a);
+    background-color: var(--light-d);
     transition: background-color 0s ease;
     -webkit-transition: background-color 0s ease;
     -moz-transition: background-color 0s ease;
@@ -115,7 +71,7 @@ a.category_indicator:hover {
 }
 
 .posts li {
-    background-color: var(--light-a);
+    background-color: var(--light-d);
     border-radius: 1rem;
     /* border: 0.2rem solid var(--light-a); */
     transition: background-color 0.3s ease;
@@ -155,11 +111,3 @@ a.category_indicator:hover {
 }
 
 
-
-
-
-@media screen and (min-width:1000px) {
-    .back {
-        position: absolute;
-    }
-}
