--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -259,7 +259,7 @@ import { TEL, TEL_HREF } from "../consts";
     }
 
     .logo_anchor > picture, .logo_anchor img {
-        height:100%;
+        display: flex;
     }
 
     .hambt {
