--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -28,14 +28,22 @@ import { Schema } from "astro-seo-schema"
 const posts = (await getCollection('blog')).sort(
 	(a, b) =>  b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
+
+let firstRandomPos = Math.floor(Math.random() * posts.length)
+let secondRandomPos = Math.floor(Math.random() * posts.length)
+
+while(firstRandomPos == secondRandomPos) {
+    secondRandomPos = Math.floor(Math.random() * posts.length)
+}
+
 ---
 
 <SubpageLayout {...post.data}>
     <section class="intro">
-        <BackBt url={`/blog/${post.data.category}#${(post.data.title).toLowerCase().replace(/\s+/g, '-')}`} label="Return Blog"/>
+        <BackBt url={`/blog/${post.data.category}#${(post.data.title).toLowerCase().replace(/\s+/g, '-')}`} label="Return to Category"/>
 
         <div class="cover">
-			<img src={post.data.heroImage} alt={post.data.description} loading="lazy"/>
+			<img src={post.data.heroImage} alt={post.data.description} loading="lazy" class="reveal"/>
 		</div>
 
         <!-- <img src={post.data.image} alt={`Photo of ${post.data.title} cleaning service`}> -->
@@ -62,40 +70,60 @@ const posts = (await getCollection('blog')).sort(
         <hr>
     
         <aside class="recommendations reveal">
-            <span class="heading">Latest Posts</span>
+            <span class="heading">More Content</span>
 
             <ul class="posts">
-                {
-                    posts.slice(0, 2).map((post) => (
-                        <>
-                            <li id={(post.data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
-                                <div class="ctnr">
-                                    <div class="content">
-                                        <div class="ctnr">
-                                                <div class="over_heading">
-                                                    <FormattedDate date={post.data.pubDate} />
-        
-                                                    <hr/>
-        
-                                                    <p class="category_indicator">{post.data.category == 'cleaning' ? 'Cleaning' : post.data.category == 'health-and-environment' ? 'Health & Environment' : post.data.category == 'efficiency' ? "Efficiency" : null}</p>
-                                                </div>
-        
-                                            <a href={`/blog/${post.slug}/`}>
-                                                <p class="title">{post.data.title}</p>
-                                            </a>
-        
-                                            <a href={`/blog/${post.slug}/`} class="read_more">Read more</a>
-                                        </div>
+                <li id={(posts[firstRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
+                    <div class="ctnr">
+                        <div class="content">
+                            <div class="ctnr">
+                                    <div class="over_heading">
+                                        <FormattedDate date={posts[firstRandomPos].data.pubDate} />
+
+                                        <hr/>
+
+                                        <p class="category_indicator">{posts[firstRandomPos].data.category == 'cleaning' ? 'Cleaning' : posts[firstRandomPos].data.category == 'health-and-environment' ? 'Health & Environment' : posts[firstRandomPos].data.category == 'efficiency' ? "Efficiency" : null}</p>
                                     </div>
-        
-                                    <a class="hero" href={`/blog/${post.slug}/`}>
-                                        <img src={post.data.heroImage} alt={post.data.description} loading="lazy"/>
-                                    </a>
-                                </div>
-                            </li>
-                        </>
-                    ))
-                }
+
+                                <a href={`/blog/${posts[firstRandomPos].slug}/`}>
+                                    <p class="title">{posts[firstRandomPos].data.title}</p>
+                                </a>
+
+                                <a href={`/blog/${posts[firstRandomPos].slug}/`} class="read_more">Read more</a>
+                            </div>
+                        </div>
+
+                        <a class="hero" href={`/blog/${posts[firstRandomPos].slug}/`}>
+                            <img src={posts[firstRandomPos].data.heroImage} alt={posts[firstRandomPos].data.description} loading="lazy"/>
+                        </a>
+                    </div>
+                </li>
+
+                <li id={(posts[secondRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
+                    <div class="ctnr">
+                        <div class="content">
+                            <div class="ctnr">
+                                    <div class="over_heading">
+                                        <FormattedDate date={posts[secondRandomPos].data.pubDate} />
+
+                                        <hr/>
+
+                                        <p class="category_indicator">{posts[secondRandomPos].data.category == 'cleaning' ? 'Cleaning' : posts[secondRandomPos].data.category == 'health-and-environment' ? 'Health & Environment' : posts[secondRandomPos].data.category == 'efficiency' ? "Efficiency" : null}</p>
+                                    </div>
+
+                                <a href={`/blog/${posts[secondRandomPos].slug}/`}>
+                                    <p class="title">{posts[secondRandomPos].data.title}</p>
+                                </a>
+
+                                <a href={`/blog/${posts[secondRandomPos].slug}/`} class="read_more">Read more</a>
+                            </div>
+                        </div>
+
+                        <a class="hero" href={`/blog/${posts[secondRandomPos].slug}/`}>
+                            <img src={posts[secondRandomPos].data.heroImage} alt={posts[secondRandomPos].data.description} loading="lazy"/>
+                        </a>
+                    </div>
+                </li>
             </ul>
         </aside>
 
