--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -26,7 +26,7 @@ import '../../styles/blog-collection.css'
 	
 					<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore similique nisi culpa, voluptatum possimus veritatis corrupti.</h2>
 
-					<a href="#posts" aria-label="Check our posts">Check Posts</a>
+					<a href="#posts" class="cta" aria-label="Check our posts">Check Posts</a>
 				</div>
 
 				<img src="/images/media/test.jpg" class="reveal" alt="Hero blog image">
