--- a/src/styles/blog-collection.css
+++ b/src/styles/blog-collection.css
@@ -43,7 +43,7 @@ section.intro {
     max-width: 40rem;
 }
 
-.intro a {
+.intro .cta {
     font-size: clamp(1.5rem, 4vw, 1.7rem);
     font-weight: 500;
     color: var(--primary-e);
@@ -66,7 +66,7 @@ section.intro {
     gap: 0.8rem;
 }
 
-.intro a::before {
+.intro .cta::before {
     content: '';
     position: relative;
     width: 0.4rem;
@@ -78,7 +78,16 @@ section.intro {
     display: block;
 }
 
-.intro a:hover {
+.intro sup a {
+    font-size: clamp(1.5rem, 4vw, 1.7rem);
+    color: var(--primary);
+    font-weight: 400;
+    margin-bottom: clamp(0.3rem, 0.8vw, 0.5rem);
+    display: inline-block;
+    opacity: 0.8;
+}
+
+.intro .cta:hover {
     background-color: var(--light);
     transition: background-color 0s ease;
     -webkit-transition: background-color 0s ease;
@@ -130,6 +139,12 @@ section.intro {
     -moz-border-radius: 0 0 0.6rem 0;
     -ms-border-radius: 0 0 0.6rem 0;
     -o-border-radius: 0 0 0.6rem 0;
+}
+
+.subset .caption:hover {
+    text-decoration: underline;
+    text-underline-offset: 0.4rem;
+    text-decoration-color: var(--primary-b);
 }
 
 .posts li > .ctnr {
@@ -269,7 +284,7 @@ section.intro {
         -moz-border-radius: 0 0 0 4rem;
         -ms-border-radius: 0 0 0 4rem;
         -o-border-radius: 0 0 0 4rem;
-        box-shadow: -4rem -5rem 9rem 0 var(--light-b);
+        /* box-shadow: -4rem -5rem 9rem 0 var(--light-b); */
 }
 
     .posts li .hero {
