--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -77,7 +77,7 @@
 
     .recommendations li:first-child .content {
         text-align: right;
-        padding: clamp(1rem, 4vw, 2.2rem) clamp(1rem, 4vw, 1.3rem) clamp(1rem, 4vw, 1.6rem) 0;
+        padding: clamp(1rem, 4vw, 2.2rem) 0 clamp(1rem, 4vw, 1.6rem) 0;
     }
 
     .recommendations li:first-child .over_heading {
@@ -98,6 +98,6 @@
     }
 
     .recommendations li:last-child .content {
-        padding: clamp(1rem, 4vw, 2.2rem) 0 clamp(1rem, 4vw, 1.6rem) clamp(1rem, 4vw, 1.3rem);
+        padding: clamp(1rem, 4vw, 2.2rem) 0 clamp(1rem, 4vw, 1.6rem) 0;
     }
 }
