--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -29,8 +29,8 @@
     position: fixed;
     inset: 0;
     width: 100%;
-    height: 100%;
     object-fit: cover;
+    height: 100vh;
 }
 
 .intro .content {
