--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -70,7 +70,7 @@ while(firstRandomPos == secondRandomPos) {
         <hr>
     
         <aside class="recommendations reveal">
-            <span class="heading">More Content</span>
+            <span class="heading">Read more</span>
 
             <ul class="posts">
                 <li id={(posts[firstRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
