--- a/src/pages/blog/[...category]/index.astro
+++ b/src/pages/blog/[...category]/index.astro
@@ -31,7 +31,7 @@ import '../../../styles/blog-post.css'
 	<section class="intro">
 		<div class="ctnr">
 			<div class="content reveal">
-				<sup><a href="/blog/">Blog category</a></sup>
+				<sup><a href="/blog/">Category</a></sup>
 
 				<h1 class="category_heading">{category == 'cleaning' ? "Cleaning" : category == 'health-and-environment' ? "Health & Environment" : category == 'efficiency' ? "Efficiency" : null}</h1>
 
@@ -50,47 +50,49 @@ import '../../../styles/blog-post.css'
 		<p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. <strong>Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</strong> Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. <b>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</b> Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget</p>
 	</div>
 
-	<ul class="posts center_base_width scroll_margin_top" id="posts">
-		{
-			posts.map((post) => (
-				<>
-					{post.data.category.includes(category)  ? (
-						<li id={(post.data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
-							<div class="ctnr reveal">
-								<div class="content">
-									<div class="ctnr">
-										<div class="over_heading">
-											<FormattedDate date={post.data.pubDate} />
-
-											<hr/>
-
-											<p class="category_indicator">{category == 'cleaning' ? 'Cleaning' : category == 'health-and-environment' ? 'Health & Environment' : category == 'efficiency' ? "Efficiency" : null}</p>
+	<div class="category_posts_ctnr center_base_width">
+		<ul class="posts scroll_margin_top" id="posts">
+			{
+				posts.map((post) => (
+					<>
+						{post.data.category.includes(category)  ? (
+							<li id={(post.data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top">
+								<div class="ctnr reveal">
+									<div class="content">
+										<div class="ctnr">
+											<div class="over_heading">
+												<FormattedDate date={post.data.pubDate} />
+	
+												<hr/>
+	
+												<p class="category_indicator">{category == 'cleaning' ? 'Cleaning' : category == 'health-and-environment' ? 'Health & Environment' : category == 'efficiency' ? "Efficiency" : null}</p>
+											</div>
+	
+											<a href={`/blog/${post.slug}/`}>
+												<h3 class="title">{post.data.title}</h3>
+											</a>
+	
+											{post.data.description ? (
+												<p class="description">{post.data.description}</p>
+											) : null}
+	
+											<a href={`/blog/${post.slug}/`} class="read_more">Read more</a>
 										</div>
-
-										<a href={`/blog/${post.slug}/`}>
-											<h3 class="title">{post.data.title}</h3>
-										</a>
-
-										{post.data.description ? (
-											<p class="description">{post.data.description}</p>
-										) : null}
-
-										<a href={`/blog/${post.slug}/`} class="read_more">Read more</a>
 									</div>
+	
+									<a class="hero" href={`/blog/${post.slug}/`}>
+										<img src={post.data.heroImage} alt={post.data.description} loading="lazy"/>
+									</a>
 								</div>
-
-								<a class="hero" href={`/blog/${post.slug}/`}>
-									<img src={post.data.heroImage} alt={post.data.description} loading="lazy"/>
-								</a>
-							</div>
-						</li>
-					) : null}
-				</>
-			))
-		}
-	</ul>
-
-	<a href="/blog/">Check All Posts</a>
+							</li>
+						) : null}
+					</>
+				))
+			}
+		</ul>
+	
+		<a class="check_all" href="/blog#posts">Check All Posts</a>
+	</div>
 </BaseLayout>
 
 
