--- a/src/styles/blog-collection.css
+++ b/src/styles/blog-collection.css
@@ -104,7 +104,26 @@ section.intro {
 .posts {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: clamp(2rem, 2vw, 3rem);
+}
+
+.category_posts_ctnr .check_all {
+    width: fit-content;
+    display: block;
+    text-align: center;
+    padding: 1.4rem clamp(2rem, 5vw, 6rem);
+    box-sizing: border-box;
+    background-color: var(--primary-e);
+    font-size: clamp(1.3rem, 4vw, 1.6rem);
+    font-weight: 400;
+    color: var(--light);
+    margin-bottom: 5rem;
+    border-radius: 0.4rem;
+    margin-inline: auto;
+}
+
+.category_posts_ctnr {
+
 }
 
 .subset:last-of-type {
@@ -243,8 +262,6 @@ section.intro {
     font-weight: 500;
     color: var(--primary-e);
 }
-
-
 
 
 
