--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -29,7 +29,7 @@ import '../../styles/blog-collection.css'
 					<a href="#posts" class="cta" aria-label="Check our posts">Check Posts</a>
 				</div>
 
-				<img src="/images/media/test.jpg" class="reveal" alt="Hero blog image">
+				<img src={posts[0].data.heroImage} class="reveal" alt="Hero blog image">
 			</div>
 		</section>
 
